# Irish_Embassies_api

./: LICENSE  README.md  fake.env  process_data_file.py  pyproject.toml  requirements.txt  server.py
auth/: authenticate_user.py  current_user.py
controllers/: embassies_controllers.py  from_db.py  from_missions.py  in_collection.py  in_db.py  into_db.py  user_controllers.py
custom_errors/: source_file_err.py
data/: all_categories.json  embassies.json  others.json
helpers/: extract.py  process.py  process_data_file.py
models/: contact.py  diplomat.py  message_models.py  mission.py  source.py  test_models.py  thing_model.py  user_model.py
mongodb/: consulate.py  contact.py  country.py  db.py  diplomat.py  embassy.py  entity_type.py  mission.py  models.py  public_embasy.py  public_representation.py  representation.py  test_models.py  user.py
routes/: admin_routes.py  consulate_routes.py  country_routes.py  diplomat_routes.py  embassy_routes.py  mission_routes.py  private_routes.py  process_routes.py  public_routes.py  representation_routes.py  token_route.py  user_routes.py
schemas/: consulate.py  contact.py  country.py  diplomat.py  embassy.py  enums.py  mission.py  pydantic_schemas.py  representation.py
services/: add_documents.py  extract.py  from_string.py  process_country_data.py  process_data.py  read_data.py  xprocess.py
tests/: conftest.py  test_country_data_processing.py  test_data_processing.py
