[tool.poetry]
name = "irish diplomatic missions abroad"
version = "0.1.0"
description = "An API to serve infomation on missions and heads of missions"
authors = ["Juan Carlos Cordovez-Mantilla <cordovez@el-cordovez.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
python-dotenv = "^1.0.1"
beanie = "^1.26.0"
pymongo = "^4.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
